fix(calendar): improve legibility of selected weekend

--- a/scss/calendar/_theme.scss
+++ b/scss/calendar/_theme.scss
@@ -91,11 +91,6 @@
             thead {
                 @include appearance( header );
             }
-
-            thead th,
-            .k-weekend .k-link {
-                opacity: $disabled-opacity;
-            }
         }
 
         .k-calendar-navigation {
